@@ -58,42 +58,6 @@ function read_default_graph_config_option($config_name) {
 	}
 }
 
-/* is_valid_email - determines if an e-mail address passed is either a valid
-     email address or distribution list.
-   @arg $email - either email address or comma/semicolon delimited list of e-mails
-   @returns - (bool) if true the email address is syntactically correct */
-function is_valid_email($email) {
-	/* check for distribution list */
-	$comma = $semic = false;
-	if (substr_count($email, ",")) {
-		$comma = true;
-		$delim = ",";
-	}
-
-	if (substr_count($email, ";")) {
-		$semic = true;
-		$delim = ";";
-	}
-
-	if ($semic && $comma) {
-		return false;
-	}elseif ($semic || $comma) {
-		$members = explode($delim, $email);
-
-		foreach ($members as $member) {
-			if (preg_match("/^ *[0-9a-zA-Z]+[-_\.0-9a-zA-Z]*@([0-9a-zA-Z]+[-\.0-9a-zA-Z]+)+\.[a-zA-Z]+ *$/", $member)) {
-				continue;
-			}else{
-				return false;
-			}
-		}
-
-		return true;
-	}else{
-		return preg_match("/^ *[0-9a-zA-Z]+[-_\.0-9a-zA-Z]*@([0-9a-zA-Z]+[-\.0-9a-zA-Z]+)+\.[a-zA-Z]+ *$/", $email);
-	}
-}
-
 /* read_graph_config_option - finds the current value of a graph configuration setting
    @arg $config_name - the name of the configuration setting as specified $settings_graphs array
      in 'include/global_settings.php'
@@ -320,6 +284,42 @@ function is_error_message() {
 	}
 
 	return false;
+}
+
+/* is_valid_email - determines if an e-mail address passed is either a valid
+     email address or distribution list.
+   @arg $email - either email address or comma/semicolon delimited list of e-mails
+   @returns - (bool) if true the email address is syntactically correct */
+function is_valid_email($email) {
+	/* check for distribution list */
+	$comma = $semic = false;
+	if (substr_count($email, ",")) {
+		$comma = true;
+		$delim = ",";
+	}
+
+	if (substr_count($email, ";")) {
+		$semic = true;
+		$delim = ";";
+	}
+
+	if ($semic && $comma) {
+		return false;
+	}elseif ($semic || $comma) {
+		$members = explode($delim, $email);
+
+		foreach ($members as $member) {
+			if (preg_match("/^ *[0-9a-zA-Z]+[-_\.0-9a-zA-Z]*@([0-9a-zA-Z]+[-\.0-9a-zA-Z]+)+\.[a-zA-Z]+ *$/", $member)) {
+				continue;
+			}else{
+				return false;
+			}
+		}
+
+		return true;
+	}else{
+		return preg_match("/^ *[0-9a-zA-Z]+[-_\.0-9a-zA-Z]*@([0-9a-zA-Z]+[-\.0-9a-zA-Z]+)+\.[a-zA-Z]+ *$/", $email);
+	}
 }
 
 /* raise_message - mark a message to be displayed to the user once display_output_messages() is called
@@ -883,9 +883,9 @@ function is_hexadecimal($hexstr) {
 }
 
 /* validate_result - determine's if the result value is valid or not.  If not valid returns a "U"
-   @arg $result - (string) the result from the poll
+   @arg $result - (string) the result from the poll, the result can be modified in the call
    @returns - (int) either to result is valid or not */
-function validate_result($result) {
+function validate_result(&$result) {
 	$delim_cnt = 0;
 	$space_cnt = 0;
 
@@ -902,6 +902,7 @@ function validate_result($result) {
 			$valid_result = true;
 		} else {
 			$valid_result = false;
+			$result = "U";
 		}
 	}
 	/* it has delimiters and has no space */
